demo/obj/server.log
In file included from pdcserver.cpp:6:
In file included from ./pdcserver.hpp:8:
In file included from ./backend_ceph.hpp:5:
./type.h:306:26: error: member reference base type 'u64 [4]' is not a structure or union
        if(data.indexlist.size() > 0){
           ~~~~~~~~~~~~~~^~~~~
./type.h:309:33: error: member reference base type 'void' is not a structure or union
            for(int i = 0;i < op->data.chunksize;i++){
                              ~~^ ~~~~
pdcserver.cpp:160:24: error: member reference type 'Msginfo *' is a pointer; maybe you meant to use '->'?
                    msg.dump("push failed");
                    ~~~^
                       ->
3 errors generated.
In file included from backend_ceph.cpp:4:
./type.h:306:26: error: member reference base type 'u64 [4]' is not a structure or union
        if(data.indexlist.size() > 0){
           ~~~~~~~~~~~~~~^~~~~
./type.h:309:33: error: member reference base type 'void' is not a structure or union
            for(int i = 0;i < op->data.chunksize;i++){
                              ~~^ ~~~~
2 errors generated.
In file included from pipe.cpp:3:
./type.h:306:26: error: member reference base type 'u64 [4]' is not a structure or union
        if(data.indexlist.size() > 0){
           ~~~~~~~~~~~~~~^~~~~
./type.h:309:33: error: member reference base type 'void' is not a structure or union
            for(int i = 0;i < op->data.chunksize;i++){
                              ~~^ ~~~~
2 errors generated.
In file included from type.cc:4:
./type.h:306:26: error: member reference base type 'u64 [4]' is not a structure or union
        if(data.indexlist.size() > 0){
           ~~~~~~~~~~~~~~^~~~~
./type.h:309:33: error: member reference base type 'void' is not a structure or union
            for(int i = 0;i < op->data.chunksize;i++){
                              ~~^ ~~~~
2 errors generated.
